--- a/Trangchu.html
+++ b/Trangchu.html
@@ -38,7 +38,7 @@
                 Hanoi-Aptech
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Giới thiệu</a></li>
+                <li><a class="dropdown-item" href="./TrangGioiThieu.html">Giới thiệu</a></li>
                 <li><a class="dropdown-item" href="#">Cơ sở vật chất</a></li>
                 <li><a class="dropdown-item" href="#">Giảng viên</a></li>
                 <li><a class="dropdown-item" href="#">Hỏi đáp</a></li>
