--- a/TrangGioiThieu.html
+++ b/TrangGioiThieu.html
@@ -11,7 +11,7 @@
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-	<link rel="stylesheet" href="./css/TrangGioiThieu.css">
+	<link rel="stylesheet" href="css/TrangGioiThieu.css">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
 						<div class="collapse navbar-collapse" id="navbarSupportedContent">
 							<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./Trangchu.html">Trang Chủ</a>
+									<a class="nav-link active" aria-current="page" href="Trangchu.html">Trang Chủ</a>
 								</li>
 								<li class="nav-item dropdown">
 									<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
